--- a/logotype_site/css/css.css
+++ b/logotype_site/css/css.css
@@ -31,6 +31,7 @@ body {
     font-size: 16px;
     line-height: 140%;
 }
+
 /*-----------header-contant------------ */
 .header-contant {
     display: flex;
@@ -81,7 +82,7 @@ body {
     margin-right: 25px;
 }
 .header-block-img {
-    background-image: url(/img/header-contant/Photo.jpg);
+    background-image: url(../img/header-contant/Photo.jpg);
     width: 687px;
     height: 557px;
 }
@@ -150,7 +151,7 @@ body {
         margin-bottom: 171px;
     }
     .header-block-img {
-        background-image: url(/img/header-contant/Photo_1000px.jpg);
+        background-image: url(../img/header-contant/Photo_1000px.jpg);
         width: 563px;
         height: 557px;
     }
@@ -211,7 +212,7 @@ body {
         margin-bottom: 80px;
     }
     .header-block-img {
-        background-image: url(/img/header-contant/Photo_768px.jpg);
+        background-image: url(../img/header-contant/Photo_768px.jpg);
         width: 348px;
         height: 420px;
     }
@@ -288,7 +289,7 @@ body {
         margin-bottom: 62px;
     }
     .header-block-img {
-        background-image: url(/img/header-contant/Photo_768px.jpg);
+        background-image: url(../img/header-contant/Photo_768px.jpg);
         width: 348px;
         height: 420px;
     }
